--- a/public/newgame.html
+++ b/public/newgame.html
@@ -23,14 +23,11 @@
     <div class="panel-body">
       <div class="input-group">
         <input id="code" type="text" class="form-control">
-       
-      </span>
+        <span class="input-group-btn">
+        <button id="lobbybtn" class="btn btn-default" type="button">Join</button>
+        <button style="display: none" id="cpubtn" class="btn btn-warning" type="button">CPU</button>
+        </span>
       </div>
-      <div class="panel-body">
-        <div class="input-group">
-          <button id="lobbybtn" class="btn btn-default" type="button">Join</button>
-          <button style="display: none" id="cpubtn" class="btn btn-warning" type="button">CPU</button>
-        </div>
     </div>
   </div>
 </body>
